change and add triangle

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -6,5 +6,5 @@ add_subdirectory(Tutorial_01)
 add_subdirectory(Tutorial_02)
 add_subdirectory(Tutorial_03)
 add_subdirectory(Tutorial_04)
-
+add_subdirectory(Tutorial_05)
 
