--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.9)
 
 project("Learn_Computer_Graphics")
 
-add_subdirectory(Tutorial_01)
-add_subdirectory(Tutorial_02)
-add_subdirectory(Tutorial_03)
-add_subdirectory(Tutorial_04)
-add_subdirectory(Tutorial_05)
-
+add_subdirectory("Tutorial_01")
+add_subdirectory("Tutorial_02")
+add_subdirectory("Tutorial_03")
+add_subdirectory("Tutorial_04")
+add_subdirectory("Tutorial_05")
+add_subdirectory("Tutorial_06")
